# executive-copilot

./: .gitignore  DOKUMENTASI_PENGGUNA.html  DOKUMENTASI_PENGGUNA.md  README.md  _body.html  start.bat  start.sh
backend/: .gitignore  Sales_Order_Data_April_2026_Project_AI_JBD.xlsx  _qa2_test_report.json  _qa3_test_report.json  _qa_test_report.json  _rag_test_report.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py  audit_log.py  batch_execution_log.py  chat_feedback.py  chat_session.py  file.py  file_relationship.py  file_version.py  ingestion_stage_log.py  pii_redaction_log.py  user.py  user_settings.py
backend/app/routers/: auth.py  chat.py  (+13 more)
backend/json/: questions-answers.json  questions-answers2.json  questions-answers3.json
backend/scripts/: deep_test_qa.py  deep_test_qa2.py  deep_test_qa3.py  download_models.py  seed_demo_users.py  seed_demo_users.sql
backend/tests/: test_audit_logger.py  test_batch_loader_api.py  test_bug_condition.py  test_chunking_properties.py  test_diff_engine.py  test_document_chunker.py  test_excel_loader.py  test_file_service.py  test_ingestion_migration.py  test_llm_provider.py  test_ocr_engine.py  test_preservation.py  test_query_router.py  test_rag_chain.py  test_scheduler.py  test_schema_registry_unit.py  test_schema_registry_validation.py  test_session_service.py  test_session_store.py  test_sessions_pagination.py  test_sync_engine.py  test_text_extractor.py  test_unit_conversion_resolver.py  test_version_restore.py  test_version_store.py  test_websocket_manager.py
(+679 files in other folders)
