[project]
name = "kb-manager-backend"
version = "0.1.0"
description = "Knowledge Base Manager - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",
    # GraphRAG dependencies
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "spacy>=3.7.0",
    "python-docx>=1.0.0",
    "networkx>=3.0",
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
    "tiktoken>=0.5.0",
    "PyMuPDF>=1.23.0",
    "openpyxl>=3.1.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "hypothesis==6.112.1",
]

[project.scripts]
download-models = "scripts.download_models:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
